Update body background-attachment to fixed for improved scrolling behavior on mobile

--- a/styles.css
+++ b/styles.css
@@ -555,7 +555,7 @@ main {
 /* До 1200px */
 @media (max-width: 1232px) {
 	body {
-		background-attachment: scroll;
+		background-attachment: fixed;
 	}
 	.dropdown-menu li a {
 		padding: 12px 17px;
